src/rtapi/ring.h

// record mode: Negative numbers are needed for skips
typedef __s32 ring_size_t;
typedef struct {
    size_t tail __attribute__((aligned(16)));
    char scratchpad_buf[0];  // actual scratchpad storage
} ringtrailer_t;
// the ringbuffer shared data
// defaults: record mode, no rmutex/wmutex use
// refcount mirrors the number of hal_ring_attach() operations but is held
// here since ringbuffers do not rely on HAL and may be used without HAL
// an example thereof is the error ring buffer in the global data segment

typedef struct {
    __u8 is_stream;      // record or stream mode
    __u8 use_rmutex;     // hint to using code - use ringheader_t.rmutex
    __u8 use_wmutex;     // hint to using code - use ringheader_t.wmutex
    int refcount;        // number of referencing entities (modules, threads..)
    int reader, writer;  // HAL module id's - informational
    int reader_instance, writer_instance; // RTAPI instance id's
    unsigned long rmutex, wmutex; // optional use - if used by multiple readers/writers
    size_t trailer_size; // sizeof(ringtrailer_t) + scratchpad size
    size_t size_mask;    // stream mode only
    size_t size;         // common to stream and record mode
    size_t head __attribute__((aligned(16)));
    __u64    generation;
    char buf[0];         // actual ring storage without scratchpad
} ringheader_t;
typedef struct {
    int magic;
    ringheader_t *header;
    ringtrailer_t *trailer;
    char *buf;
    void *scratchpad;
} ringbuffer_t;
// using layer data structures
typedef struct {
    const ringbuffer_t *ring;
    __u64   generation;
    size_t offset;
} ringiter_t;
typedef struct {
    void * rv_base;
    size_t rv_len;
} ringvec_t;
/* record_write_begin():
 *
 * begin a zero-copy write operation for at least sz bytes. This povides a buffer
 * to write to within free ringbuffer space.
 *
 * return 0 if there is sufficient space for the requested size
 * return EAGAIN if there is currently insufficient space
 * return ERANGE if the write size exceeds the ringbuffer size.
 *
 * The write needs to be committed with a corresponding record_write_end()
 * operation whose size argument must be less or equal to the size requested in
 * record_write_begin().
 */
static inline int record_write_begin(ringbuffer_t *ring, void ** data, size_t sz)
{
    size_t free;
    ringheader_t *h = ring->header;
    ringtrailer_t *t = ring->trailer;
    size_t a = size_aligned(sz + sizeof(ring_size_t));
    if (a > h->size)
	return ERANGE;

    free = (h->size + h->head - t->tail - 1) % h->size + 1; // -1 + 1 is needed for head==tail

    //printf("Free space: %d; Need %zd\n", free, a);
    if (free <= a) return EAGAIN;
    if (t->tail + a > h->size) {
	if (h->head <= a)
	    return EAGAIN;
	*data = _size_at(ring, 0) + 1;
	return 0;
    }
    *data = _size_at(ring, t->tail) + 1;
    return 0;
}
/* record_write_end()
 *
 * commit a zero-copy write to the ring which was started by record_write_begin().
 * sz on record_write_end() must be less equal to the size requested in
 * the corresponding record_write_begin().
 */
static inline int record_write_end(ringbuffer_t *ring, void * data, size_t sz)
{
    ringheader_t *h = ring->header;
    ringtrailer_t *t = ring->trailer;

    size_t a = size_aligned(sz + sizeof(ring_size_t));
    if (data == _size_at(ring, 0) + 1) {
	// Wrap
	*_size_at(ring, t->tail) = -1;
	t->tail = 0;
    }
    *_size_at(ring, t->tail) = sz;

    /* ensure that previous writes are seen before we update the write index
       (write after write)
    */
    rtapi_smp_wmb();

    t->tail = (t->tail + a) % h->size;
    //printf("New head/tail: %zd/%zd\n", h->head, t->tail);
    return 0;
}
/* record_write()
 *
 * copying write operation from existing buffer/length
 * record boundaries will be preserved.
 *
 * return 0 on success
 * return EAGAIN if there is currently insufficient space
 * return ERANGE if the write size exceeds the ringbuffer size.
 */
static inline int record_write(ringbuffer_t *ring, void * data, size_t sz)
{
    void * ptr;
    int r = record_write_begin(ring, &ptr, sz);
    if (r) return r;
    memmove(ptr, data, sz);
    return record_write_end(ring, ptr, sz);
}
/* record_read()
 *
 * non-copying read operation.
 *
 * Fail with EAGAIN if no data available.
 * Otherwise set data to point to the current record, and size to the size of the
 * current record.
 *
 * Note this is a 'peek' operation, it does not advance the read pointer to the next
 * record. To actually consume the record, call record_shift() after processing.
 */
static inline int record_read(const ringbuffer_t *ring,  const void **data, size_t *size)
{
    return _ring_read_at(ring, ring->header->head, data, size);
}
/* record_shift()
 *
 * consume a record in the ring buffer.
 * used with a corresponding record_read().
 *
 * return 0 on success
 * return EAGAIN if nothing to consume.
 *
 * example processing loop:
 *
 * void *data;
 * size_t size;
 *
 * while (record_read(ring, &data, &size) == 0) {
 *    // process(data,size)
 *    record_shift(ring);
 * }
 *
 * NB: without record_shift(), record_next/record_next_size
 * are in effect a peek operation
 */
static inline int record_shift(ringbuffer_t *ring)
{
    ring_size_t off = _ring_shift_offset(ring, ring->header->head);
    if (off < 0) return EAGAIN;
    ring->header->generation++;
    ring->header->head = off;
    return 0;
}
/* rings by default behave like queues:
 * - record_write() to add
 * - record_read()/record_shift() to remove.
 *
 * to make a ring behave as a circular buffer, use this scheme:
 *
 * write side: gain space by consuming records if needed:
 *
 * while (record_write(...) == EAGAIN)
 *    record_shift();
 *
 * the read side uses iterators like so:
 *
 * ringiter_t ri;
 * record_iter_init(ringbuffer, &ri);
 * while (1) {
 *    while ((result = record_iter_read(&ri,&data, &size)) == EINVAL)
 *       record_iter_init(ringbuffer, &ri); // renew
 *    if (result == EAGAIN)
 *       sleep(duration);
 *       continue;
 *    copy data to local buffer;
 *    if (record_iter_shift(&ri)) == EINVAL)
 *       continue;
 *    consume_data(localbuffer);
 */

// iterator functions

static inline int record_iter_init(const ringbuffer_t *ring,
				       ringiter_t *iter)
{
    iter->ring = ring;
    iter->generation = ring->header->generation;
    iter->offset = ring->header->head;
    if (ring->header->generation != iter->generation)
        return EAGAIN;
    return 0;
}
static inline int record_iter_shift(ringiter_t *iter)
{
    ring_size_t off;

    if (record_iter_invalid(iter)) return EINVAL;
    off = _ring_shift_offset(iter->ring, iter->offset);
    if (off < 0) return EAGAIN;
    iter->generation++;
    iter->offset = off;
    return 0;
}
static inline int record_iter_read(const ringiter_t *iter,
				   const void **data, size_t *size)
{
    if (record_iter_invalid(iter)) return EINVAL;

//    printf("Read at %zd\n", iter->offset);
    return _ring_read_at(iter->ring, iter->offset, data, size);
}